--- a/src/nintendo/Animal Crossing/AnimalCrossing.html
+++ b/src/nintendo/Animal Crossing/AnimalCrossing.html
@@ -2,7 +2,7 @@
 <html lang="es-ES">
 <head>
     <meta charset="UTF-8">
-    <tittle>Animal Crossing</tittle>
+    <title>Animal Crossing</title>
     <link rel="stylesheet" href="..\..\..\estilos\estilos.css">
 </head>
 <body>
