--- a/src/pc/juegos/hell.html
+++ b/src/pc/juegos/hell.html
@@ -8,28 +8,17 @@
 <body>
 <div>
 <h1 class="diseñoh">Animal Crossing</h1>
-<p>Animal Crossing es un videojuego de simulación social y de vida que Nintendo ha descrito como un «juego de comunicación».
-     El personaje vive una vida en la que el usuario decide qué hacer, como cumplir las tareas propuestas por los vecinos 
-     (que no son obligatorias). Los jugadores asumen el rol de un nuevo vecino que se acaba de mudar al pueblo. El género 
-     y la cara del personaje depende de las respuestas que se le den a las preguntas de un gato llamado Fran, el cual nos 
-     encontramos en el tren en el que el personaje viaja al pueblo. Hay que tener en cuenta que todos los vecinos son animales
-      excepto el personaje principal que controla el jugador. Hay tareas que los jugadores pueden hacer y objetivos que pueden
-       realizar para mejorar su pueblo y su personaje.
-
-    El juego funciona en tiempo real, y muchas fiestas del juego son fiestas de la vida real, como Halloween el 31 de octubre.
-     También hay fiestas con el nombre cambiado, pero que siguen siendo un festivo de la vida real, como el Día de los juguetes
-      (Navidad). También hay días de actividades y competiciones, como torneos de pesca por las mañanas. Cuando el jugador quiera dejar de jugar,
-       tendrá que hablar con Giroide, que en este juego sirve para guardar la partida. Si apaga la consola o se resetea el juego sin guardar,
-        un topo llamado Rese T. Ado aparece frente a la casa del personaje principal para regañar al jugador y decirle que no vuelva a hacer trampas.
-         Suelen ser charlas muy largas, y si el jugador apaga la consola sin guardar repetidas veces, Rese T. Ado le dirá que borrará su partida,
-          pero esto no es más que una advertencia.
-    
-    Uno de los objetivos principales del juego es aumentar el tamaño de la casa. En la casa se pueden poner los objetos que el jugador
-     consiga a lo largo del juego. La casa se puede personalizar de muchas maneras: cambiando el el color del techo, las paredes, los suelos,
-      añadiendo nuevos muebles y poniendo música de fondo (para lo que será necesario tener un reproductor de música). Estas personalizaciones
-       son puntuadas por la Academia de Artes Decorativas (AAD) todos los domingos. Los jugadores tienen la opción de recibir o no recibir cartas
-        de la ADD al inicio del juego, pero una vez que acepta, no se puede revocar esta decisión. Desde el lanzamiento de la versión para móviles,
-         se permite a los jugadores conseguir dinero rápidamente.</p>
-<img src="https://sm.ign.com/ign_es/screenshot/default/animal-crossing-new-horizons-ano-despues_9bfb.jpg" width="616" height="353">
+<p>Hell Let Loose es un videojuego de disparos en primera persona en línea que tiene lugar durante la Segunda Guerra Mundial. Fue lanzado en 2019 y fue desarrollado por 
+    Black Matter Pty Ltd.
+    El juego tiene dos equipos: los Aliados y las Potencias del Eje. Cada equipo está formado por múltiples pelotones, y cada pelotón es liderado por un jugador que 
+    asume el papel de comandante. El objetivo principal del juego es capturar y mantener diferentes puntos estratégicos en el mapa de juego, lo que permite al equipo avanzar hacia la victoria.
+    Los jugadores pueden elegir entre diferentes roles, como soldado de infantería, médico, conductor de tanque, artillero y más. Cada rol tiene habilidades y 
+    equipo únicos que pueden ser utilizados para ayudar al equipo a lograr sus objetivos.
+    El juego también tiene un sistema de suministros que permite a los jugadores solicitar suministros y refuerzos para ayudar en la lucha. Además, los jugadores pueden 
+    construir estructuras y defensas para fortalecer sus posiciones.
+     Hell Let Loose también es conocido por su enfoque en la autenticidad histórica, con detalles cuidadosamente recreados de armas, uniformes y vehículos de la Segunda 
+    Guerra Mundial. El juego también tiene un enfoque en la comunicación y la cooperación del equipo, con herramientas de chat y voz para ayudar a los jugadores a trabajar 
+    juntos de manera efectiva.</p>
+         <img src="..\..\..\img\hellet2.jpg" width="500px" height="300px">
 </div>
 </body>
