--- a/src/pc/juegos/project.html
+++ b/src/pc/juegos/project.html
@@ -2,34 +2,24 @@
 <html lang="es-ES">
 <head>
     <meta charset="UTF-8">
-    <tittle>Animal Crossing</tittle>
+    <title>Hell let loose </title>
     <link rel="stylesheet" href="..\..\..\estilos\estilos.css">
 </head>
 <body>
 <div>
 <h1 class="diseñoh">Animal Crossing</h1>
-<p>Animal Crossing es un videojuego de simulación social y de vida que Nintendo ha descrito como un «juego de comunicación».
-     El personaje vive una vida en la que el usuario decide qué hacer, como cumplir las tareas propuestas por los vecinos 
-     (que no son obligatorias). Los jugadores asumen el rol de un nuevo vecino que se acaba de mudar al pueblo. El género 
-     y la cara del personaje depende de las respuestas que se le den a las preguntas de un gato llamado Fran, el cual nos 
-     encontramos en el tren en el que el personaje viaja al pueblo. Hay que tener en cuenta que todos los vecinos son animales
-      excepto el personaje principal que controla el jugador. Hay tareas que los jugadores pueden hacer y objetivos que pueden
-       realizar para mejorar su pueblo y su personaje.
-
-    El juego funciona en tiempo real, y muchas fiestas del juego son fiestas de la vida real, como Halloween el 31 de octubre.
-     También hay fiestas con el nombre cambiado, pero que siguen siendo un festivo de la vida real, como el Día de los juguetes
-      (Navidad). También hay días de actividades y competiciones, como torneos de pesca por las mañanas. Cuando el jugador quiera dejar de jugar,
-       tendrá que hablar con Giroide, que en este juego sirve para guardar la partida. Si apaga la consola o se resetea el juego sin guardar,
-        un topo llamado Rese T. Ado aparece frente a la casa del personaje principal para regañar al jugador y decirle que no vuelva a hacer trampas.
-         Suelen ser charlas muy largas, y si el jugador apaga la consola sin guardar repetidas veces, Rese T. Ado le dirá que borrará su partida,
-          pero esto no es más que una advertencia.
-    
-    Uno de los objetivos principales del juego es aumentar el tamaño de la casa. En la casa se pueden poner los objetos que el jugador
-     consiga a lo largo del juego. La casa se puede personalizar de muchas maneras: cambiando el el color del techo, las paredes, los suelos,
-      añadiendo nuevos muebles y poniendo música de fondo (para lo que será necesario tener un reproductor de música). Estas personalizaciones
-       son puntuadas por la Academia de Artes Decorativas (AAD) todos los domingos. Los jugadores tienen la opción de recibir o no recibir cartas
-        de la ADD al inicio del juego, pero una vez que acepta, no se puede revocar esta decisión. Desde el lanzamiento de la versión para móviles,
-         se permite a los jugadores conseguir dinero rápidamente.</p>
-<img src="https://sm.ign.com/ign_es/screenshot/default/animal-crossing-new-horizons-ano-despues_9bfb.jpg" width="616" height="353">
+<p>Project Zomboid es un videojuego de supervivencia de mundo abierto en línea que se desarrolla en un mundo postapocalíptico invadido por zombies. Fue lanzado en 2011 y fue 
+    desarrollado por The Indie Stone.
+    El juego es una experiencia de supervivencia en tiempo real, en la que los jugadores deben explorar un mundo abierto peligroso y encontrar recursos para sobrevivir 
+    mientras enfrentan una horda de zombies cada vez mayor.
+    Los jugadores deben construir refugios, encontrar alimentos y suministros, y crear armas y herramientas para defenderse de los zombies y otros jugadores hostiles. El 
+    juego también presenta un sistema de enfermedades y lesiones, lo que significa que los jugadores deben tener cuidado de mantenerse sanos y curarse de lesiones para 
+    sobrevivir.
+    Además de la supervivencia, los jugadores pueden optar por trabajar juntos con otros jugadores en línea para crear comunidades y fortalezas para luchar contra los 
+    zombies, o pueden elegir luchar entre sí para obtener recursos y territorio.
+    Project Zomboid también cuenta con un sistema de envejecimiento y una muerte permanente, lo que significa que si el personaje del jugador muere, se pierde todo el 
+    progreso del juego y se debe comenzar de nuevo. El juego también cuenta con actualizaciones regulares y una comunidad de mods activa, lo que permite a los jugadores 
+    personalizar y mejorar su experiencia de juego.</p>
+         <img src="..\..\..\img\zomboid2.jpg" width="500px" height="300px">
 </div>
 </body>
