correciones juegos pc

--- a/src/pc/juegos/hell.html
+++ b/src/pc/juegos/hell.html
@@ -2,12 +2,12 @@
 <html lang="es-ES">
 <head>
     <meta charset="UTF-8">
-    <tittle>Animal Crossing</tittle>
+    <tittle>Hell let loose</tittle>
     <link rel="stylesheet" href="..\..\..\estilos\estilos.css">
 </head>
 <body>
 <div>
-<h1 class="diseñoh">Animal Crossing</h1>
+<h1 class="diseñoh">Hell let loose</h1>
 <p>Hell Let Loose es un videojuego de disparos en primera persona en línea que tiene lugar durante la Segunda Guerra Mundial. Fue lanzado en 2019 y fue desarrollado por 
     Black Matter Pty Ltd.
     El juego tiene dos equipos: los Aliados y las Potencias del Eje. Cada equipo está formado por múltiples pelotones, y cada pelotón es liderado por un jugador que 
@@ -19,6 +19,6 @@
      Hell Let Loose también es conocido por su enfoque en la autenticidad histórica, con detalles cuidadosamente recreados de armas, uniformes y vehículos de la Segunda 
     Guerra Mundial. El juego también tiene un enfoque en la comunicación y la cooperación del equipo, con herramientas de chat y voz para ayudar a los jugadores a trabajar 
     juntos de manera efectiva.</p>
-         <img src="..\..\..\img\hellet2.jpg" width="500px" height="300px">
+         <img src="..\..\..\img\helllet2.jpg" width="500px" height="300px">
 </div>
 </body>
