--- a/src/pc/juegos/project.html
+++ b/src/pc/juegos/project.html
@@ -2,12 +2,12 @@
 <html lang="es-ES">
 <head>
     <meta charset="UTF-8">
-    <title>Hell let loose </title>
+    <title>Project Zomboid </title>
     <link rel="stylesheet" href="..\..\..\estilos\estilos.css">
 </head>
 <body>
 <div>
-<h1 class="diseñoh">Animal Crossing</h1>
+<h1 class="diseñoh">Project Zomboid</h1>
 <p>Project Zomboid es un videojuego de supervivencia de mundo abierto en línea que se desarrolla en un mundo postapocalíptico invadido por zombies. Fue lanzado en 2011 y fue 
     desarrollado por The Indie Stone.
     El juego es una experiencia de supervivencia en tiempo real, en la que los jugadores deben explorar un mundo abierto peligroso y encontrar recursos para sobrevivir 
