--- a/src/pc/juegos/project.html
+++ b/src/pc/juegos/project.html
@@ -20,6 +20,6 @@
     Project Zomboid también cuenta con un sistema de envejecimiento y una muerte permanente, lo que significa que si el personaje del jugador muere, se pierde todo el 
     progreso del juego y se debe comenzar de nuevo. El juego también cuenta con actualizaciones regulares y una comunidad de mods activa, lo que permite a los jugadores 
     personalizar y mejorar su experiencia de juego.</p>
-         <img src="..\..\..\img\zomboid2.jpg" width="500px" height="300px">
+         <img src="..\..\..\img\zomboid.jpg" width="500px" height="300px">
 </div>
 </body>
